# remindme

./: README.md  pyproject.toml
remindme/: cli.py  file_manager.py  formatters.py  main.py
tests/: test_cli.py  test_file_manager.py  test_formatter.py
