[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remindme"
version = "0.1.0"
description = "CLI tool for reminding some ideas that come up in a moment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
]

[project.scripts]
remindme = "remindme.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
